# nwpu_course_parallel_computing

./: .gitignore
MPIFloyd/: CMakeLists.txt
MPIFloyd/src/: main.cpp  test.cpp
N-queen/: CMakeLists.txt  out.txt
N-queen/src/: MPI_N_queen.cpp  main.cpp  n-queen.cpp  n-queen.h  stopwatch.h
SuperQuikSort/: CMakeLists.txt  in.txt  out0.txt  out1.txt  out2.txt  out3.txt  run.py
SuperQuikSort/src/: main.cpp
SuperQuikSort/test/: main  test.cpp
cal_PI/: CMakeLists.txt
cal_PI/src/: cal_PI.cpp  cal_PI.h  main.cpp  stopwatch.cpp
cal_PI/test/: CMakeLists.txt  Test_cal_PI.cpp
floyd/: CMakeLists.txt
floyd/src/: floyd.cpp  floyd.h  main.cpp  stopwatch.cpp
floyd/test/: main.cpp
temp/MPIFloyd/: CMakeLists.txt
temp/MPIFloyd/src/: test.cpp
实验报告/: main.tex
